welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: method posFin has return statement; needs result type
			if (estFaceMur == true) {return true}
                                                 ^